# iam0-axum

./: .env.development  .gitignore  Cargo.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
migrations/: 1_clients.sql  2_users.sql  3_roles.sql
scripts/: create.sh  run_development.sh  run_test.sh  setup.sh  watch_development.sh
src/: api.rs  app_state.rs  config.rs  http.rs  main.rs
src/api/: error.rs  handlers.rs
